<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/berter_color_2"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/icono_barter" />

                <TextView
                    android:id="@+id/tv_titulo"
                    android:layout_width="300dp"
                    android:layout_height="74dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/berter_color_2"
                    android:gravity="center"
                    android:text="@string/titulo"
                    android:textColor="@android:color/white"
                    android:textSize="27sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="12dp"
                android:background="@color/berter_color"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/nombre"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="text"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>//nombre

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:layout_marginBottom="12sp"
                android:background="@color/berter_color"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/correo"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_correo"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>//correo

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:layout_marginBottom="12sp"
                android:background="@color/berter_color"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/telefono"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_telefono"
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>//telefono


            <LinearLayout
                android:id="@+id/ly_genero"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:layout_marginBottom="12sp"
                android:background="@color/berter_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/genero"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/rg_genero"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_masculino"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/masculino"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/rd_femenino"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/femenino"
                        android:textColor="@color/white" />
                </RadioGroup>
            </LinearLayout>//genero

            <TextView
                android:id="@+id/tv_fecha_de_nacimiento_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12dp"
                android:background="@color/berter_color"
                android:text="@string/fecha_de_nacimiento_label"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/berter_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fecha_de_nacimiento"
                    android:layout_width="291dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fecha_nacimiento"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/ib_calendario"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/berter_color_2"
                    android:contentDescription="TODO"
                    app:srcCompat="@android:drawable/ic_menu_today" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_ciudades"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="12sp"
                android:background="@color/berter_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_ciudad_nacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/c_nacimiento"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/sp_lugar_naciminto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/ciudades" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/berter_color"
                android:text="@string/hobbies"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/berter_color"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_Deportes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arte" />

                <CheckBox
                    android:id="@+id/cb_musica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/musica" />

                <CheckBox
                    android:id="@+id/cb_juegos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vjuegos" />

                <CheckBox
                    android:id="@+id/cb_lectura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lectura" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="12dp"
                android:background="@color/berter_color"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/contrasena"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_clave"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>//contraseña

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@color/berter_color"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/repetir_contrasena"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_repetir_clave"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>//contraseña


            <Button
                android:id="@+id/bt_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:background="@color/goldenrod"
                android:text="@string/guardar"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_resultados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:layout_marginBottom="12sp"
                android:background="@color/berter_color_2"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>