<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_consola"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/berter_color_2"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="312dp"
                android:layout_height="129dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_barter"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:background="@color/berter_color"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/correo"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/et_correo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textSize="17sp"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/berter_color"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/clave"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/et_clave"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textSize="17sp" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_inicio_sesion"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@color/berter_color"
                android:text="@string/I_sesion"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/tv_consola_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/berter_color_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_nuevo_usuario"
                android:layout_width="149dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="180dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/white"
                android:text="@string/registrarse"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>


